updated selectivity blocks and offsets

--- a/WoE.Rmd
+++ b/WoE.Rmd
@@ -119,7 +119,7 @@ For dusky shark, biomass trajectories declined considerably in the late 1970s fo
 
 For whiskery shark, biomass trajectories declined considerably in the late 1940s following increasing exploitation, with the median biomass estimate falling below the limit reference level between the 1990s and early 2010s, before increasing in recent years following a reduction in catches, with the median biomass estimate remaining above target reference levels since 2020-21. Projections to 2026-27 show an increasing biomass trend. For 2021-22 and 2026-27, the probability that relative biomass was above the limit reference level was 87% and 97%, respectively. However, the probability that relative biomass was below the limit, and between the limit and threshold reference levels was 13% and 19%, respectively, for 2021-22. The F trajectories remained at a negligible level at the start of the time series, peaking in the 1990s (when limit reference levels were exceeded), and declining in recent years. For 2021-22, median F was considerably below the target reference level. Projections to 2026-27 show a declining trend in F (well below the target reference level). For 2021-22 and 2026-27, the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Medium**. On the basis of this evidence, whiskery shark is classified as a **Sustainable stock**.
 
-For sandbar shark, biomass trajectories declined considerably in the 1970s following the initial period of exploitation, with the median biomass estimate falling between the target and threshold reference levels in the mid-2000s but increasing in recent years following a reduction in catches, with the median biomass remaining above target reference levels since the early 2010s. Projections to 2026-27 show an increasing biomass trend. The F trajectories remained at a negligible level at the start of the time series, peaking in the late 2000s (when limit reference levels were exceeded) and declining in recent years. For 2021-22, median F was considerably below the target reference level. Projections to 2026-27 show a stable trend in levels of F (i.e., below the target reference level). For 2021-22 and 2026-27, the probability that the relative biomass was above the limit reference level was 100%, and the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Low**. On the basis of this evidence, sandbar shark is classified as a **Sustainable stock**.
+For sandbar shark, biomass trajectories declined considerably in the 1970s following the initial period of exploitation, with the median biomass estimate falling between the threshold and limit reference levels in the late-2000s. However, median biomass increased in recent years following a reduction in catches,remaining above target reference levels since the early 2010s. Projections to 2026-27 show an increasing biomass trend. The F trajectories remained at a negligible level at the start of the time series, peaking in the late 2000s (when limit reference levels were exceeded) and declining in recent years. For 2021-22, median F was considerably below the target reference level. Projections to 2026-27 show a stable trend in levels of F (i.e., below the target reference level). For 2021-22 and 2026-27, the probability that the relative biomass was above the limit reference level was 100%, and the probability that F was below the limit reference level was 100%. Based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be **Low**. On the basis of this evidence, sandbar shark is classified as a **Sustainable stock**.
 
 For the non-indicator species, based on all available lines of evidence (see Table below), the risk level over the next five years is estimated to be High for angel sharks, **Medium** for sawsharks, copper, and spinner sharks, and Low for the other non-indicator species. For copper and angel sharks, most of the catch has been taken by fisheries outside the jurisdiction and management influence of WA, and angel sharks were classed as **High** risk due to the high levels of uncertainty in the MSY value inferred from catch-only modelling (see Level 1 Assessment below in Risk-based weight of evidence table: Non-indicator species). On the basis of this evidence, all non-indicator species are classified as **Sustainable stocks**.
 
@@ -1179,11 +1179,11 @@ Tab=full_join(Tab1,Tab2,by=c("Range","Scenario","finyear","Model"))%>%
 # Appendix 12. Integrated population dynamics modelling   
 We built sex- and age-structured models using Stock Synthesis and time series of catch and available time series of abundance, catch length composition and mean body weight. For sandbar shark, point estimates of F derived from mark-recapture [@McAuley2007b] were also included. The *r4ss* [@taylorVisualizingCatchatageModels2021] and *ss3diags* R packages were used for pre- and post-processing Stock Synthesis inputs and outputs. A full description of Stock Synthesis is available in Methot et al. [-@methotStockSynthesisBiological2013]. Below is a description of model inputs and assumptions.
 
-Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, growth, size at birth, length-weight) were sourced from the demographic and SSS modelling described above (Tables A.9.1, A.10.3, Figure A.12.1). Growth at age was assumed to follow the von Bertalanffy growth relationship. Mean length at age was assumed to follow a normal distribution with juvenile and adult CVs set at 0.14 and 0.1, respectively, based on the age-length data dispersion observed for gummy, dusky, whiskery and sandbar sharks. Fecundity was assumed to increase linearly with maternal length. For species when only a litter size range was reported, the intercept of the linear relationship was prespecified at the litter size mean and the slope was set at 0. The fecundity parameters were divided by the mean of the reproductive cycle length to calculate annual pup production. We assumed a Beverton-Holt stock-recruitment relationship parametrised as a function of lnRo, *h* and the standard deviation in recruitment ($\sigma_R$). Unexploited equilibrium recruitment was estimated whereas *h* was prespecified at the mean value used for SSS modelling (Table A.10.3). Deviates from the stock-recruit relationship were prespecified following examination of preliminary Stock Synthesis outputs with the *r4ss* package (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]). Preliminary examination with the *r4ss* package also allowed adjusting expected recruitment bias so that resulting recruitment on the standard scale is mean unbiased [@methotAdjustingBiasDue2011]. These prespecified values are shown in Appendix 13. 
+Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, growth, size at birth, length-weight) were sourced from the demographic and SSS modelling described above (Tables A.9.1, A.10.3, Figure A.12.1). Growth at age was assumed to follow the von Bertalanffy growth relationship. Mean length at age was assumed to follow a normal distribution with juvenile and adult CVs set at 0.14 and 0.1, respectively, based on the age-length data dispersion observed for gummy, dusky, whiskery and sandbar sharks. Fecundity was assumed to increase linearly with maternal length. For species when only a litter size range was reported, the intercept of the linear relationship was prespecified at the litter size mean and the slope was set at 0. The fecundity parameters were divided by the mean of the reproductive cycle length to calculate annual pup production. We assumed a Beverton-Holt stock-recruitment relationship parametrised as a function of lnRo, *h* and the standard deviation in recruitment ($\sigma_R$). Unexploited equilibrium recruitment was estimated whereas *h* was prespecified at the mean value used for SSS modelling (Table A.10.3). Deviates from the stock-recruit relationship were prespecified following examination of preliminary Stock Synthesis outputs with the *r4ss* package (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]). Preliminary examination with the *r4ss* package also allowed adjusting expected recruitment bias so that resulting recruitment on the standard scale is mean unbiased [@methotAdjustingBiasDue2011]. 
 
 The start and end years of the model were 1941 and 2021, respectively. Initial fishing mortality was not estimated as fishing was assumed to be negligible prior to 1941 [@Braccini2021]. Available time series of catch, abundance, length composition and mean body weight data (Figure A.12.2) were assigned to 'fleets' and 'surveys' (Table A.12.1). For dusky shark, abundance series were not considered for reasons explained in Appendix 11 so a catch-length model was constructed [@Rudd2021]. Catch-length models were also built for smooth hammerhead and spinner shark because abundance time series were not available for smooth hammerhead and available TDGDLF CPUE was not considered to represent abundance trend for spinner shark as explained in Appendix 11.
 
-Gear selectivity estimates for the main fleets capturing the assessed species were only available or could be estimated for dusky, gummy, milk, sandbar, spinner and whiskery sharks, and smooth hammerhead. Hence, Stock Synthesis models were built for these species only. Logistic and dome-shaped selectivity functions were assumed depending on the characteristics of the different fleets and species (Appendix 13). For the southern shark fisheries, which use predominately gillnets, dome-shaped selectivity parameters were mostly estimated using the empirical estimates derived by Kirkwood and Walker [-@Kirkwood1986a], Simpfendorfer and Unsworth [-@Simpfendorfer1998c], McAuley et al. [-@McAuley2007a] and Braccini et al. [-@Braccini2022], as initial values although for spinner shark, due to data limitations, they were mostly prespecified to the values reported by Braccini et al. [-@Braccini2022] for the family Carcharhinidae. For the northern shark fisheries, which used predominately hooks, (asymptotic) logistic selectivity parameters were estimated for milk shark or prespecified at 50% length at maturity for spinner shark, as mostly adult individuals were caught by these fisheries. For the other species taken in the northern shark fisheries, dome-shaped selectivity was assumed given their large size and capacity to bend hooks, which was reflected in the small number of large individuals in the length composition. For the Indonesian, Taiwanese and other fleets, selectivity was mirrored to the northern shark fisheries selectivity. For dusky shark, given the current maximum retention size limit (70 cm inter dorsal length), a retention function was implemented with discard mortality pre-specified at 60% [@bracciniHighPostcaptureSurvival2012]. Sex-specific length composition from the northern and southern shark fisheries were collected by onboard observers as fork length (FL) [@Braccini2016b]. This was input into Stock Synthesis as total length (TL) applying published conversion factors [@bartesLengthLengthRelationships2023]. For each fleet, only years with at least 150 observations were included. The TL data were compiled in length bins of 5 cm. Due to the limited number of observations by sex, male and female length composition was combined for milk shark for the northern shark fisheries and the survey, for dusky shark for the survey, and for smooth hammerhead for the southern shark fisheries. Male selectivity was estimated as a female selectivity offset for sandbar shark for the northern shark fisheries and for whiskery and gummy sharks for the southern shark fisheries. For other species/fleets, males and females were assumed to have equal selectivity. 
+Gear selectivity estimates for the main fleets capturing the assessed species were only available or could be estimated for dusky, gummy, milk, sandbar, spinner and whiskery sharks, and smooth hammerhead. Hence, Stock Synthesis models were built for these species only. Logistic and dome-shaped selectivity functions were assumed depending on the characteristics of the different fleets and species. For the southern shark fisheries, which use predominately gillnets, dome-shaped selectivity parameters were mostly estimated using the empirical estimates derived by Kirkwood and Walker [-@Kirkwood1986a], Simpfendorfer and Unsworth [-@Simpfendorfer1998c], McAuley et al. [-@McAuley2007a] and Braccini et al. [-@Braccini2022], as initial values although for spinner shark, due to data limitations, they were mostly prespecified to the values reported by Braccini et al. [-@Braccini2022] for the family Carcharhinidae. For the northern shark fisheries, which used predominately hooks, (asymptotic) logistic selectivity parameters were estimated for milk shark or prespecified at 50% length at maturity for spinner shark, as mostly adult individuals were caught by these fisheries. For the other species taken in the northern shark fisheries, dome-shaped selectivity was assumed given their large size and capacity to bend hooks, which was reflected in the small number of large individuals in the length composition. For the Indonesian, Taiwanese and other fleets, selectivity was mirrored to the northern shark fisheries selectivity. For dusky shark, given the current maximum retention size limit (70 cm inter dorsal length), a retention function was implemented with discard mortality pre-specified at 60% [@bracciniHighPostcaptureSurvival2012]. Sex-specific length composition from the northern and southern shark fisheries were collected by onboard observers as fork length (FL) [@Braccini2016b]. This was input into Stock Synthesis as total length (TL) applying published conversion factors [@bartesLengthLengthRelationships2023]. For each fleet, only years with at least 150 observations were included. The TL data were compiled in length bins of 5 cm. Due to the limited number of observations by sex, male and female length composition was combined for milk shark for the northern shark fisheries and the survey, for dusky shark for the survey, and for smooth hammerhead for the southern shark fisheries. Male selectivity was estimated as a female selectivity offset for sandbar shark for the northern shark fisheries and for whiskery and gummy sharks for the southern shark fisheries. For other species/fleets, males and females were assumed to have equal selectivity. Time-varying selectivity, using time blocks (before and after 1999), was implemented for sandbar sharks captured in the southern shark fisheries due to changes in the spatial distribution of length composition samples, particularly in the West Coast (Appendix 13). For whiskery and gummy sharks, a male offset was used in the estimation of selectivity parameters for the southern shark fisheries due to their spatial sexual segregation [@Braccini2016b].
 
 Following Francis [-@Francis2011], we employed the two-stage data weighting approach available in SS3 to iteratively tune variance adjustment factors for fleet-specific abundance indices externally to the model (Stage 1) and length composition data within SS3 (Stage 2). For the abundance indices, the same weighting process applied for building the JABBA models was applied (see Appendix 11). For the length composition data (Stage 2), the *r4ss* package was used to estimate the effective sample size of each data set based on Francis' [-@Francis2011] method and the residuals of the Stock Synthesis model fit (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]).
 
@@ -1780,3 +1780,11 @@ Tab=full_join(Tab1,Tab2,by=c("Range","Scenario","finyear","Model"))%>%
 
 <br>  
 
+# Appendix 13. Spatio-temporal distribution of available length composition   
+
+<br>
+  
+```{r, echo=FALSE}
+path=handl_OneDrive(paste('Analyses/Size and sex patterns/spatial_length_comp/Pop din_spatial_sandbar shark_West.tiff'))
+```
+![Figure A.13.1. Spatio-temporal distribution of sandbar shark length composition samples collected in the West coast by boat and mesh size.](`r path`){width=800px}
