fixed last bit before publishing

--- a/WoE.Rmd
+++ b/WoE.Rmd
@@ -103,9 +103,9 @@ On the basis of this evidence, all non-indicator species are classified as **Sus
 Assessment date: `r format(Sys.time(), "%B %Y")`
 
 # Executive Summary
-Over 100 elasmobranch species have been identified in the catches of commercial and/or recreational fisheries in Western Australia (WA). Gummy, dusky, whiskery, and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operates in the West Coast and South Coast Bioregions and comprises the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Joint Authority Southern Demersal Gillnet and Demersal Longline Managed Fishery (JASDGDLF), which operates from 33° S to the WA/South Australia (SA) border. Sandbar shark and, to a lesser extent, dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06’ E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum), and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to be negligible both in terms of historical and extant harvest.
+Over 100 elasmobranch species have been identified in the catches of commercial and/or recreational fisheries in Western Australia (WA). Gummy, dusky, whiskery, and sandbar sharks are the most commonly captured species (~80% of the elasmobranch catch). These species have been targeted in the Temperate Demersal Gillnet and Demersal Longline Fisheries (TDGDLF), which operates in the West Coast and South Coast Bioregions and comprises the West Coast Demersal Gillnet and Demersal Longline (Interim) Managed Fishery (WCDGDLF), which operates between 26° and 33° S, and the Southern Demersal Gillnet and Demersal Longline Managed Fishery (SDGDLF), which operates from 33° S to the WA/South Australia (SA) border. Sandbar shark and, to a lesser extent, dusky shark were also targeted by the Northern Shark Fisheries, which operated between 114° 06’ E and the WA/Northern Territory (NT) border and ceased operations in 2008-09. The current catch of sharks and rays in other WA commercial fisheries is negligible (< 10 t per annum), and recreational fishers retain very small numbers of sharks in WA. Indigenous catches of these species are considered to be negligible both in terms of historical and extant harvest.
 
-Based on their importance to fisheries, inherent vulnerabilities, and sustainability risk, whiskery, gummy, dusky, and sandbar sharks have been selected as indicators for the status of the temperate elasmobranch (sharks and rays) ‘suite’ as they represent the range of life history strategies of other elasmobranch species caught by these fisheries. However, with the increasing number of elasmobranch species being listed in national (Environment Protection and Biodiversity Conservation Act 1999, EBPC Act) and international (Convention on International Trade in Endangered Species, CITES; Convention on the Conservation of Migratory Species, CMS) protection lists, species-specific scientific advice on stock status at the local level is needed to comply with national and international legislation.
+Based on their importance to fisheries, inherent vulnerabilities, and sustainability risk, whiskery, gummy, dusky, and sandbar sharks have been selected as indicators for the status of the temperate elasmobranch (sharks and rays) ‘suite’ as they represent the range of life history strategies of other elasmobranch species caught by these fisheries. However, with the increasing number of elasmobranch species being listed in national (Environment Protection and Biodiversity Conservation Act 1999, EBPC Act) and international (Convention on International Trade in Endangered Species, CITES; Convention on the Conservation of Migratory Species, CMS) protection lists, species-specific scientific advice on stock status at the local level is needed to understand species status in the context of national and international species conservation significance.
 
 For whiskery shark, the initial historical stock assessment [@Simpfendorfer2000a] was based on a bespoke age- and sex-structured model (i.e., L5 assessment). This assessment determined that the mature female biomass in 1997-98 (the last year of the assessed data series) was at 23% of virgin levels, and to achieve management biomass targets with a 50% probability by 2010, recommended catches were required to be maintained below 190 tonnes. For sandbar and dusky sharks, previous stock assessments [@McAuley2007b] were based on demographic and mark recapture analyses. These assessments determined that the combined fishing pressure from WA shark fisheries and cryptic mortality from other fisheries was deemed unsustainable at the effort peak (1990s-2000s). More recently, the weight of evidence assessments for the four indicator species (L1 and L5 assessments for whiskery shark, L1 assessments for gummy, dusky, and sandbar sharks; @bracciniRiskbasedWeightEvidence2021), determined that the risk posed by fishing to the sustainability of these stocks was assessed as Medium for 2015-16 (the last year of the data series) and for the projected period to 2020-21. Prior to the current study, there has been no stock assessments for other shark and ray species captured in WA because the main species were considered as indicators to entire suite of species.
 
@@ -151,7 +151,7 @@ For many of the non-indicator species, the MSY values inferred from the catch-on
 
 Finally, a formal harvest strategy that considers and defines reference points and control rules for managing the resource is required, as the current management settings only provide a single reference point for assessing shark species (40% unfished biomass), and this reference point is not explicitly defined as a target, threshold, or limit. In addition, unlike other resources for which reference points relate to the spawning biomass (equivalent to female mature biomass for sharks), the current reference point in the TDGDLF relates to total biomass. A successful harvest strategy could also be informed through Management Strategy Evaluation (e.g., Doering et al. [-@doeringSSMSEPackageManagement2023]).  
 
-Next assessment is proposed for 2029 to allow for data collection, processing and analyses.
+The next assessment for the WA Elasmobranch Resource is proposed for 2029 to allow for data collection, processing and analyses.
 
 
 # Assessed species
@@ -422,7 +422,7 @@ flextable(Tab)%>%
 ```
 <!---BLOCK_LANDSCAPE_STOP--->
 ## Environment
-The spatio-temporal distribution of catch per unit of effort for the TDGDLF was combined with annual sea surface temperature anomalies to determine possible environment-driven changes in species distributions. In addition, the vulnerability of sharks and rays to climate change was extracted from published semi-quantitative risk assessments [@chinIntegratedRiskAssessment2010; @Walker2021].
+The spatio-temporal distribution of CPUE for the TDGDLF was combined with annual sea surface temperature anomalies to determine possible environment-driven changes in species distributions. In addition, the vulnerability of sharks and rays to climate change was extracted from published semi-quantitative risk assessments [@chinIntegratedRiskAssessment2010; @Walker2021].
 
 ```{r, results = 'asis'}
 Paz=handl_OneDrive("Analyses/Catch and effort/Outputs/Spatial_Climate change/elasmos")
@@ -459,12 +459,12 @@ For each assessed species, reported and reconstructed time series of catch by fi
 ```{r, echo=FALSE}
 path=paste(Model.outputs.RAR,'/Catch_all_species_Indicator.sp.tiff',sep='')
 ```
-![Figure A.4.2. Catch time series for indicator species. Recreational, WA reconstructed recreational harvest (boat-based, shore-based and charter boats); TEP, WA Reported Threatened, Endangered and Protected species catches; WRL, WA reconstructed Western Rock lobster Fishery; NT, Northern Territory's commercial landings; SA MSF, South Australia’s Marine Scalefish Fishery landings; GAB Trawl, Great Australian Bight Trawl Fishery landings; WTB, Western Tuna and Billfish Fishery landings; Taiwan, reconstructed catches by Taiwanese vessels in WA waters; Indonesia, reconstructed catches by Indonesian vessels in WA waters.](`r path`){width=800px}
+![Figure A.4.2. Catch time series for indicator species. Recreational, WA reconstructed recreational harvest (boat-based, shore-based and charter boats); TEP, WA Reported Threatened, Endangered and Protected species catches; WRL, WA reconstructed West Coast Rock lobster Fishery; NT, Northern Territory's commercial landings; SA MSF, South Australia’s Marine Scalefish Fishery landings; GAB Trawl, Great Australian Bight Trawl Fishery landings; WTB, Western Tuna and Billfish Fishery landings; Taiwan, reconstructed catches by Taiwanese vessels in WA waters; Indonesia, reconstructed catches by Indonesian vessels in WA waters.](`r path`){width=800px}
 
 ```{r, echo=FALSE}
 path=paste(Model.outputs.RAR,'/Catch_all_species_Other.sp.tiff',sep='')
 ```
-![Figure A.4.3. Catch time series for non-indicator species. Recreational, WA reconstructed recreational harvest (boat-based, shore-based and charter boats); TEP, WA Reported Threatened, Endangered and Protected species catches; WRL, WA reconstructed Western Rock lobster Fishery; NSW Fisheries, New South Wales Fisheries commercial landings; SA MSF, South Australia’s Marine Scalefish Fishery landings; GAB Trawl, Great Australian Bight Trawl Fishery landings; WTB, Western Tuna and Billfish Fishery landings; Taiwan, reconstructed catches by Taiwanese vessels in WA waters; Indonesia, reconstructed catches by Indonesian vessels in WA waters.](`r path`){width=800px}
+![Figure A.4.3. Catch time series for non-indicator species. Recreational, WA reconstructed recreational harvest (boat-based, shore-based and charter boats); TEP, WA Reported Threatened, Endangered and Protected species catches; WRL, WA reconstructed West Coast Rock lobster Fishery; NSW Fisheries, New South Wales Fisheries commercial landings; SA MSF, South Australia’s Marine Scalefish Fishery landings; GAB Trawl, Great Australian Bight Trawl Fishery landings; WTB, Western Tuna and Billfish Fishery landings; Taiwan, reconstructed catches by Taiwanese vessels in WA waters; Indonesia, reconstructed catches by Indonesian vessels in WA waters.](`r path`){width=800px}
 
 <br>
 
@@ -1179,7 +1179,7 @@ Tab=full_join(Tab1,Tab2,by=c("Range","Scenario","finyear","Model"))%>%
 # Appendix 12. Integrated population dynamics modelling   
 We built sex- and age-structured models using Stock Synthesis and time series of catch and available time series of abundance, catch length composition and mean body weight. For sandbar shark, point estimates of F derived from mark-recapture [@McAuley2007b] were also included. The *r4ss* [@taylorVisualizingCatchatageModels2021] and *ss3diags* R packages were used for pre- and post-processing Stock Synthesis inputs and outputs. A full description of Stock Synthesis is available in Methot et al. [-@methotStockSynthesisBiological2013]. Below is a description of model inputs and assumptions.
 
-Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, growth, size at birth, length-weight) were sourced from the demographic and SSS modelling described above (Tables A.9.1, A.10.3, Figure A.12.1). Growth at age was assumed to follow the von Bertalanffy growth relationship. Mean length at age was assumed to follow a normal distribution with juvenile and adult CVs set at 0.14 and 0.1, respectively, based on the age-length data dispersion observed for gummy, dusky, whiskery and sandbar sharks. Fecundity was assumed to increase linearly with maternal length. For species when only a litter size range was reported, the intercept of the linear relationship was prespecified at the litter size mean and the slope was set at 0. The fecundity parameters were divided by the mean of the reproductive cycle length to calculate annual pup production. We assumed a Beverton-Holt stock-recruitment relationship parametrised as a function of lnRo, *h* and the standard deviation in recruitment ($\sigma_R$). Unexploited equilibrium recruitment was estimated whereas *h* was prespecified at the mean value used for SSS modelling (Table A.10.3). Deviates from the stock-recruit relationship were prespecified following examination of preliminary Stock Synthesis outputs with the *r4ss* package (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]). Preliminary examination with the *r4ss* package also allowed adjusting expected recruitment bias so that resulting recruitment on the standard scale is mean unbiased [@methotAdjustingBiasDue2011]. 
+Life history inputs (M~*a*~, fecundity, maturity, reproductive cycle length, growth, size at birth, length-weight) were sourced from the demographic and SSS modelling described above (Tables A.9.1, A.10.3, Figure A.12.1). Growth at age was assumed to follow the von Bertalanffy growth relationship. Mean length at age was assumed to follow a normal distribution with juvenile and adult CVs set at 0.14 and 0.05 for long-lived species and 0.1 for short-lived species, respectively, based on the age-length data dispersion observed for gummy, dusky, whiskery and sandbar sharks. Fecundity was assumed to increase linearly with maternal length. For species when only a litter size range was reported, the intercept of the linear relationship was prespecified at the litter size mean and the slope was set at 0. The fecundity parameters were divided by the mean of the reproductive cycle length to calculate annual pup production. We assumed a Beverton-Holt stock-recruitment relationship parametrised as a function of lnRo, *h* and the standard deviation in recruitment ($\sigma_R$). Unexploited equilibrium recruitment was estimated whereas *h* was prespecified at the mean value used for SSS modelling (Table A.10.3). Deviates from the stock-recruit relationship were prespecified following examination of preliminary Stock Synthesis outputs with the *r4ss* package (e.g., Courtney et al. [-@courtneyStockSynthesisSS32017]). Preliminary examination with the *r4ss* package also allowed adjusting expected recruitment bias so that resulting recruitment on the standard scale is mean unbiased [@methotAdjustingBiasDue2011]. 
 
 The start and end years of the model were 1941 and 2021, respectively. Initial fishing mortality was not estimated as fishing was assumed to be negligible prior to 1941 [@Braccini2021]. Available time series of catch, abundance, length composition and mean body weight data (Figure A.12.2) were assigned to 'fleets' and 'surveys' (Table A.12.1). For dusky shark, abundance series were not considered for reasons explained in Appendix 11 so a catch-length model was constructed [@Rudd2021]. Catch-length models were also built for smooth hammerhead and spinner shark because abundance time series were not available for smooth hammerhead and available TDGDLF CPUE was not considered to represent abundance trend for spinner shark as explained in Appendix 11.
 
@@ -1282,7 +1282,7 @@ if('Daily.cpues'%in%names(Tab))
   border_inner_h(border = fp_border_default(width = 0), part = "header")%>%
   set_caption(caption = "Table A.12.1. Input parameter values for the integrated population dynamics models. h, steepness; σR, recruitment standard deviation; lnRo, log of unexploited equilibrium recruitment; Low, lower bound; Init., initial value; Up, upper bound; TLo, total length at birth (cm); TL50, total length at 50% maturity (cm); k, growth coefficient; a and b, parameters of the length-weight relationship (in cm and kg, respectively); f_a and f_b, parameters of the fecundity at age relationship; L_a and L_b, parameters of the TL-FL (fork length, in cm) relationship.",
               autonum = NULL)%>%
-   footnote(i = 1, j = 22,value = as_paragraph("Northern.shark, Northern Shark Fisheries; Southern.shark_1, TDGDLF monthly records; Southern.shark_2, TDGDLF daily records; WRL, Western Rock Lobster Fishery"), ref_symbols = 'a',part = "header",inline = TRUE)%>%
+   footnote(i = 1, j = 22,value = as_paragraph("Northern.shark, Northern Shark Fisheries; Southern.shark_1, TDGDLF monthly records; Southern.shark_2, TDGDLF daily records; WRL, West Coast Rock lobster Fishery"), ref_symbols = 'a',part = "header",inline = TRUE)%>%
    fontsize(size=7.5, part='footer')
 }
   
